# Mimir

./: .env.example  .gitignore  Dockerfile  Dockerfile.bot  Dockerfile.web  apply_fixes.py  check_coverage.py  create_bot_secrets.py  deploy_web.sh  dev.py  insert_metrics.py  insert_metrics.sql  list_metrics.py  pyproject.toml  rewrite_html.py  setup_gcp_cicd.sh  snapshot_job.py
.github/workflows/: deploy-bot.yml  deploy-web.yml
src/: agent.py  bot.py  bq_catalog.py  bq_client.py  config.py  detector.py  jira_client.py  steep_client.py  web.py
templates/: admin.html
web/: web.py
